Fixed bug #43099 (XMLWriter::endElement() does not check # of params)